--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,13 @@ body {
     display: flex;
 }
 
+.selectors {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .pipeLeft {
     width: 10px;
     margin-left: auto;
